# Projeto-HardTech

./: .env.example  README.md  example_scraper.py  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  SCRAPERS.md
src/: __init__.py  config.py
src/models/: __init__.py  product.py
src/scrapers/: __init__.py  amazon_scraper.py  base_scraper.py  kabum_scraper.py  mercadolivre_scraper.py  newegg_scraper.py  pichau_scraper.py  terabyte_scraper.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  test_scrapers.py
